--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,19 @@ header {
   min-height: 100vh;
   background-size: cover;
   display: flex;
+  flex-direction: column;
   background-position: center center;
+  align-items: flex-start;
+}
+
+header .content {
+  margin: auto;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
+  padding: 1rem;
 }
 nav .logo {
   font-size: 2rem;
@@ -31,4 +38,24 @@ nav ul {
   display: flex;
   list-style-type: none;
   padding: 0;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 100%;
+  width: 1000px;
+}
+
+nav li a {
+  color: white;
+  padding: 1rem;
+  text-decoration: none;
+}
+
+.highlight {
+  background-color: #00c2ff;
+}
+
+.selected {
+  font-weight: bold;
 }
