--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-  background-image: url("Automotive.png");
+  background-image: url("car.jpg");
   color: white;
   min-height: 100vh;
   background-size: cover;
@@ -38,7 +38,7 @@ nav {
   padding: 1rem;
 }
 nav .logo {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 nav ul {
@@ -73,4 +73,23 @@ nav li a {
 #Visit {
   margin-top: 10px;
   font-weight: 500;
+}
+
+footer {
+  height: 100px;
+  background-color: #000;
+  color: white;
+  padding: 1rem;
+}
+
+footer ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style-type: none;
+  padding: 0;
+}
+
+footer strong {
+  color: #6f69ac;
 }
