--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,17 @@ body {
   margin: 0;
 }
 
+.container {
+  padding: 1rem;
+  margin: 0 auto;
+  max-width: 100%;
+  width: 1000px;
+}
+
 header {
-  background-image: url("car.jpg");
+  background-image: url("car_pic.jpg");
   color: white;
-  min-height: 100vh;
+  min-height: calc(100vh - 102px);
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -22,8 +29,9 @@ header {
 }
 
 .content {
-  margin: auto;
   font-size: 2rem;
+  margin: auto;
+  max-width: 100%;
 }
 
 .content h1 {
@@ -35,7 +43,6 @@ header {
 nav {
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
 }
 nav .logo {
   font-size: 2.5rem;
@@ -45,12 +52,6 @@ nav ul {
   display: flex;
   list-style-type: none;
   padding: 0;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 100%;
-  width: 1000px;
 }
 
 nav li a {
@@ -76,7 +77,6 @@ nav li a {
 }
 
 footer {
-  height: 100px;
   background-color: #000;
   color: white;
   padding: 1rem;
@@ -92,4 +92,15 @@ footer ul {
 
 footer strong {
   color: #6f69ac;
+}
+
+footer p {
+  margin: 0;
+}
+
+@media screen and(max-width:700px) {
+  .content {
+    font-size: 1.4rem;
+    margin: 2rem auto 0;
+  }
 }
